# assemble-chord

./: README.md  pyproject.toml
.github/workflows/: python-ci.yml
src/assemble_chord/app/core/: __init__.py
src/assemble_chord/app/core/chordfy/: create.py  find.py  notes.py  parser.py  util.py
src/assemble_chord/app/core/chordfy/chord_utils/: chords.py  intervals.py  notes.py
src/assemble_chord/app/core/entity/: chord.py
src/assemble_chord/app/core/harmony/: enums.py  music.py  samba.py
src/assemble_chord/app/core/music_chords/: decode.py  get_chord.py
src/assemble_chord/app/exceptions/: chrods.py  harmony.py
tests/: test_chords.py  test_create_chords.py  test_find.py  test_harmony.py  test_intervalos.py  test_music_chords.py  test_notas.py  test_parser.py
